--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.0.3",
     "mongoose": "^5.13.5",
+    "nodemon": "^2.0.12",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   },
@@ -39,7 +40,6 @@
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "nodemon": "^2.0.12"
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
